posible version final aun sin probar, delete y patch agregados